sitepreview/trust/v1.3.0/Requirements-RetrieveBusinessRulesFHIR.md
# Retrieve HL7 FHIR compatible business rules - WHO SMART Trust v1.3.0

* [**Table of Contents**](toc.md)
* [**Indices**](indices.md)
* [**Artifact Index**](artifacts.md)
* **Retrieve HL7 FHIR compatible business rules**

## Requirements: Retrieve HL7 FHIR compatible business rules (Experimental) 

| | |
| :--- | :--- |
| *Official URL*:http://smart.who.int/trust/Requirements/RetrieveBusinessRulesFHIR | *Version*:1.3.0 |
| Active as of 2025-10-27 | *Computable Name*:Retrieve FHIR Business Rules |

 
Retrieve business rules from a distribution point using HL7 FHIR standards 

* Publisher: Contact Email
  * [WHO](http://who.int): No contact email has been registered.
* Publisher: Jurisdiction
  * [WHO](http://who.int): 
* Publisher: Statements
  * [WHO](http://who.int): 
* Publisher: Derived from
  * [WHO](http://who.int): This requirement is not derived from another requriement.
* Publisher: Derivatives
  * [WHO](http://who.int): This requirement has the following derivatives:
* Publisher: Participating Actors
  * [WHO](http://who.int): * [Receiver](ActorDefinition-Receiver.md)


